--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mohamedgaber-intake40/filter-quent": "^2.0",
         "spatie/laravel-medialibrary": "^11.10"
     },
     "require-dev": {
